fixing css on mobile

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -21,8 +21,8 @@
 
 .demande-compo-form {
   background: white;
-  padding: 40px;
-  margin: 60px 0 5px 0;
+  padding: 10px;
+  margin: 60px 15px 5px 15px;
   border-radius: 20px 20px 0 0;
   box-shadow: 0 -10px 10px rgba(20, 20, 20, 0.2);
   display: flex;
